# ortrta

./: .gitignore  LICENSE  README.md
dplyr/: heat.html  heat.rmd
fortran/: Makefile  heat.md
haskell/: Makefile  heat.cabal  heat.md
jupyter/: Makefile  heat.html  heat.ipynb
r/: heat.html  heat.rmd
scala/: Makefile  build.sbt  heat.md
slides/: slides.html  start-slides.sh
slides/local/: dark-blue.css  hind.css
sqlite/: Makefile  heat.md
thrust/: Makefile  heat.md
