name:                heat
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable heat
  hs-source-dirs:      .
  main-is:             heat.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                      ,repa
                      ,random
  default-language:    Haskell2010

